# Agent_007

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  start_agent.bat  start_bot.bat  stop_agent.bat
alembic/: env.py
alembic/versions/: 0001_init.py  0002_signal_sl_tp.py
config/: base.yaml  paper.yaml
docs/: architecture.md  project-structure.md  runbook.md
scripts/: _check_instruments.py  _check_today.py  _check_token.py  _check_trade_status.py  _inject_test_signal.py  _list_trades.py  health_check.py  kill_switch.py  run.ps1  run_bot.ps1  stop.ps1
src/auth/: __init__.py  kite_session.py
src/backtest/: __init__.py  daily_test_run.py  engine.py  option_pricing.py  report.py  run.py  simulator.py
src/broker/: __init__.py  instrument_catalog.py  kite_client.py  kite_ws.py
src/core/: __init__.py  bus.py  clock.py  config.py  events.py  exceptions.py  kill_switch.py  logging.py
src/execution/: __init__.py  paper.py  position_watcher.py
src/indicators/: __init__.py  calculator.py  loop.py
src/journal/: __init__.py  order_journal.py  signal_journal.py
src/notifications/: __init__.py  alerts.py  bot.py
src/options/: __init__.py  selector.py
src/regime/: __init__.py  detector.py  loop.py
src/risk/: __init__.py  engine.py  position_tracker.py
src/strategies/: __init__.py  base.py  ema_regime.py  orb_breakout.py  runner.py
src/workers/: __init__.py  daily_test.py  ingestor.py  refresh_instruments.py  telegram_bot.py  token_refresh.py
tests/: conftest.py
tests/unit/: test_backtest_engine.py  test_bar_aggregator.py  test_clock.py  test_config.py  test_ema_regime_strategy.py  test_events.py  test_indicator_calculator.py  test_kill_switch.py  test_kite_classify.py  test_logging.py  test_notifications.py  test_option_pricing.py  test_option_selector.py  test_orb_strategy.py  test_regime_detector.py  test_risk_engine.py  (+1 more)
