[project]
name = "trading-agent"
version = "0.1.0"
description = "Risk-first options trading agent on Kite Connect (Indian markets)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Operator" }]

dependencies = [
    # Broker
    "kiteconnect>=5.0.1",
    # Core data
    "pandas>=2.2",
    "numpy>=1.26",
    "pandas-ta>=0.3.14b",
    # Async + web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    # Cache / streams
    "redis>=5.0",
    # Validation / config
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    # Time / scheduling
    "apscheduler>=3.10",
    "pytz>=2024.1",
    # Resilience
    "tenacity>=8.3",
    # Logging
    "structlog>=24.1",
    "rich>=13.7",
    # Secrets
    "cryptography>=42.0",
    # TOTP helper for daily Kite login
    "pyotp>=2.9",
    # Telegram bot — phone control + push alerts
    "python-telegram-bot>=20.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "freezegun>=1.5",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-pyyaml",
    "types-pytz",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
